--- a/index.ipynb
+++ b/index.ipynb
@@ -60,11 +60,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number = None\n",
+    "number = 42\n",
     "number"
    ]
   },
@@ -77,11 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Change Things'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "flatiron_mantra = None\n",
+    "flatiron_mantra = \"Change Things\"\n",
     "flatiron_mantra"
    ]
   },
@@ -93,10 +115,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Now add a new code cell below this one and write whatever code you want to write."
+    "### This is a new header"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "its been hard but i managed\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Now add a new code cell below this one and write whatever code you want to write.\n",
+    "\n",
+    "print(\"its been hard but i managed\")"
    ]
   },
   {
